--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,18 +7,18 @@ androidx-activity = "1.11.0"
 androidx-appcompat = "1.7.1"
 androidx-core = "1.17.0"
 androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.8.2"
+androidx-lifecycle = "2.9.5"
 androidx-testExt = "1.3.0"
 composeHotReload = "1.0.0-rc02"
-composeMultiplatform = "1.8.2"
+composeMultiplatform = "1.9.1"
 junit = "4.13.2"
-kotlin = "2.2.0"
+kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
 material-icons-extended="1.7.3"
-koin = "4.0.0"
+koin = "4.1.1"
 room = "2.8.3"
 sqlite = "2.6.1"
-ksp = "2.2.0-2.0.2"
+ksp = "2.3.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
